# toresy

./: Cargo.toml  README.md  format.rhai  rules.sexp  test.txt
.github/workflows/: publish.yml  tests.yml
src/: data.rs  formatting.rs  lib.rs  main.rs
