[package]
name = "toresy"
version = "0.2.0"
edition = "2021"
description = "Simple term rewriting system based on tokenization"
license-file = "LICENSE"
repository = "https://github.com/hardliner66/toresy"

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
rhai = "1.20.1"
serde = { version = "1.0.217", features = ["derive"] }
serde-lexpr = "0.1.3"
serde_yaml = "0.9.34"
stringlit = "2.1.0"
