[package]
name = "toresy"
version = "0.3.0"
edition = "2021"
description = "Simple term rewriting system based on tokenization"
license-file = "LICENSE"
repository = "https://github.com/hardliner66/toresy"

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
script-format = "0.6.0"
serde = { version = "1.0.217", features = ["derive"] }
serde-lexpr = "0.1.3"
serde_yaml = "0.9.34"
stringlit = "2.1.0"
